@@ -13,6 +13,7 @@ Version 1.1.7 to be released
 - Bug #2060: Fixed the bug that CWebUser::getFlashes() would return a counter array in the result (Qiang)
 - Bug #2097: CHttpRequest::getUrl() should be the same as getRequestUri (Qiang)
 - Bug #2099: Fixed CDbCriteria::mergeWith error (creocoder, Sam Dark)
+- Bug #2107: Fixed the bug that calling CSqliteSchema::resetSequence() may throw exception when no autoincrement column (Qiang)
 - Bug #2130: Fixed bug that Gii code/diff view was not starting from top (mdomba)
 - Bug #2140: Fixed the problem that CGridView even rows where not properly rendered in Firefox and Chrome (mdomba)
 - Bug #2146: Fixed the bug in CFileHelper::getExtension, validatePath and getMimeTypeByExtension that was not finding the file extension correctly (mdomba)
